Fix publishin issues

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
+    "build:sandbox": "run-p type-check \"build-only:sandbox {@}\" --",
     "build-only": "vite build",
+    "build-only:sandbox": "vite build --mode sandbox",
+    "preview": "vite preview",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "deploy:gh-pages": "npm run build && gh-pages -d dist"
+    "deploy:gh-pages": "npm run build:sandbox && gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.13"
